# multi_agentic_patterns_langchain

./: .gitignore  CLAUDE.md  README.md  patterns.md  pyproject.toml  requirements.txt
examples/: context_quarantine.py  custom_workflow_content_pipeline.py  deep_agents_research_assistant.py  handoffs_customer_support.py  hierarchical_teams.py  router_knowledge_base.py  skills_code_assistant.py  subagents_finance_assistant.py  supervisor_forward_tool.py
pattern_selector_agent/: README.md  __init__.py  __main__.py  agent.py  middleware.py  prompts.py  state.py
pattern_selector_agent/knowledge/: context-quarantine.md  custom-workflows.md  deep-agents.md  handoffs.md  hierarchical-teams.md  router.md  skills.md  subagents.md  supervisor-forward.md
pattern_selector_agent/tools/: __init__.py  decision.py  patterns.py
skills/devops-expert/: SKILL.md
skills/go-expert/: SKILL.md
skills/javascript-expert/: SKILL.md
skills/python-expert/: SKILL.md
skills/react-expert/: SKILL.md
skills/rust-expert/: SKILL.md
skills/sql-expert/: SKILL.md
src/agentic_patterns/: __init__.py
src/agentic_patterns/agents/: __init__.py  finance.py  knowledge.py  support.py
src/agentic_patterns/core/: __init__.py  checkpointer.py  config.py  middleware.py  utils.py
src/agentic_patterns/state/: __init__.py  content.py  router.py  support.py
src/agentic_patterns/tools/: __init__.py
src/agentic_patterns/tools/code/: __init__.py  generation.py  skills.py
src/agentic_patterns/tools/finance/: __init__.py  budget.py  (+2 more)
tests/: __init__.py  conftest.py  test_pattern_selector_agent.py
(+7 files in other folders)
